# ProntoPredator

./: .appveyor.yml  .clang-format  .gitignore  .travis.yml  CMakeLists.txt  LogView.pro  README.md  TabCompositeViewer.cpp  TabCompositeViewer.hpp  Viewer.cpp  Viewer.hpp  ViewerWidget.cpp  ViewerWidget.hpp  icons.qrc  mainwindow.cpp  mainwindow.h  mainwindow.ui
ci/: Dockerfile  build_app.sh  create_docker_image.sh
src/: Bookmark.cpp  Bookmark.hpp  BookmarksModel.cpp  BookmarksModel.hpp  CustomLogView.cpp  CustomLogView.hpp  EfficientLogFilterProxyModel.cpp  EfficientLogFilterProxyModel.hpp  FileViewer.cpp  FileViewer.hpp  FilterParams.hpp  GrepDialogWindow.cpp  GrepDialogWindow.hpp  GrepDialogWindow.ui  GrepModel.cpp  GrepModel.hpp  GrepNode.cpp  GrepNode.hpp  HighlightDialog.cpp  HighlightDialog.hpp  HighlightRule.hpp  ILineNumberingPolicy.hpp  LineNumberArea.cpp  LineNumberArea.hpp  LineNumberingBasedOnModelPolicy.cpp  LineNumberingBasedOnModelPolicy.hpp  LogFilterProxyModel.cpp  LogFilterProxyModel.hpp  LogViewer.cpp  LogViewer.hpp  Logfile.cpp  Logfile.hpp  LogfileModel.cpp  LogfileModel.hpp  MainWindow.cpp  MainWindow.hpp  MainWindow.ui  ModelNumberingPolicy.cpp  ModelNumberingPolicy.hpp  ProjectModel.cpp  (+24 more)
src/loader/: LoaderLogFile.cpp  LoaderLogFile.hpp  Project.cpp  Project.hpp
src/serializer/: Serializer.hpp  SerializerBookmark.cpp  SerializerBookmark.hpp  SerializerBookmarksModel.cpp  SerializerBookmarksModel.hpp  SerializerGrepNode.cpp  SerializerGrepNode.hpp  SerializerLogfile.cpp  SerializerLogfile.hpp  SerializerProjectModel.cpp  SerializerProjectModel.hpp
src/ui/: HighlightDialog.ui  MainWindow.ui
